lab1/Test/L1-A-10-38.output
Error Type A at Line 16
Error Type B at Line 18
Error Type B at Line 20
Error Type B at Line 25
Error Type B at Line 37
Error Type A at Line 39
Error Type A at Line 50
Error Type A at Line 52
Error Type A at Line 52
