lab1/Test/L1-A-10-38.cmm
float ;
struct IxAOr6YwntWW In6Xq [ 1750488123 ] 
;
struct BCmnSM4_ou0iStBf {
};
struct {
  int wVmw ;
  struct yAQtvqFq4CfXOWLLB t , GWLMi2598E = yf = MGsTaZKeSO5naHWzd4z 
    || kfz66uYa && RzwL >= pfsakg3iN7uLK + - ! I3LTx5Y6VZoSCDgwbDQN 
    [ iAuSktoC < WfyIS - ZeCLiLy_yeUkruST * ! XbjoTUsQj73P2hOtnhY 
    ( _RWiBG ( XNg9APpI7o9BgGG_qpe , ZNc3y3_5SdXt || Let2YYq03SPtGKaK8ySg 
    == g + Y9pt0WxD / F9ke3Kr8fckP6sxY ( GhT1TlkqlXDFQexCFO 
    = WV7TEDeKoI <= HzMErGYdl / - ! unBzwrxXGOg5sP [ gtOoXsyhl 
    > ( kY33tlc = Smk1 = JR0u61QvFS = mELpvbHQG16GpGx 
    != ! ! L_Z6R_EevUG5lY0fBNxd [ 262780755.843191209 
    ] ^) ] . HGP ) ) * 902704294 . EgfWZnfKzPqVugz1Fl 
    . mlefZj * RCf2tO57PCMJ ) ] / YaH2Hy8UpkoH9 ( ) ;
}k9M2AzZmIkm ( int _Rtk7MYxmLY3 [ ) {
}
int sjGyVpKmy_1BNJpQm float , tf_U_dNBQUwvZKBDt1 

;
int ;
int ED ( ) {
  JzY1vK5WYeR_c > ;
  if ( dXD2jpBFwv )   N9tCW9XNQWjH64 ;
else   while ( IZ9emM_5kVIDq ) {
  }

  if ( cNf558ffmifuyp8Z )   bFXyn ;
else   if ( IWP )   return cEuOUTzBqSU7 ;


}
int ;
int G8 ( ) {
}) 
int Gk8IT6vXbEuuXOs6UrdV ( ) {
}^
int ;
int Fopzey1pCut3sK9aN6vE ( ) {
}
int ;
int ;
int ;
int ;
int ;
int ;
int JUST7e8zEv6fkn0IM ( int Flp2iGJUONLQ , int jR 
  @) {
}
@&